# JobReqPilot

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: errors.py  main.py  middleware.py
backend/app/api/v1/: search.py  summarize.py
backend/app/models/: search.py  summarize.py
backend/app/services/: cache.py  ollama_client.py  orchestrator.py  scorer.py
docs/: ARCHITECTURE.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: search.ts  summarize.ts
frontend/src/components/: JobCard.tsx  JobList.test.tsx  JobList.tsx  SearchForm.test.tsx  SearchForm.tsx  SummaryView.test.tsx  SummaryView.tsx
frontend/src/store/: jobStore.ts
frontend/src/types/: index.ts
mcp-servers/job-search/: Dockerfile  pyproject.toml  server.py
mcp-servers/job-search/tests/: test_build_query.py  test_scrape_jd.py  test_search_jobs.py
mcp-servers/job-search/tools/: build_query.py  scrape_jd.py  search_jobs.py
mcp-servers/summarize/: .dockerignore  Dockerfile  pyproject.toml  server.py
mcp-servers/summarize/tests/: test_aggregate_jds.py  test_extract_requirements.py
mcp-servers/summarize/tools/: aggregate_jds.py  extract_requirements.py
